bdr.BDR.scala.error
Erreur de compilation :
BDR:10: error: value recule is not a member of Unit
  else if (litMessage=="X"){recule();recule()recule()}
                                             ^